# everything-nix

./: .envrc  .gitignore  .lua-format  .sops.yaml  README.md  configuration.nix  default.nix  flake.nix  history.md  oldVimConfig.vim  options.nix  paths.nix  rebuild.sh  secrets.nix  secrets.nix.secret  shell.nix  startup  test.sh
.gitsecret/keys/: pubring.kbx  pubring.kbx~  trustdb.gpg
.gitsecret/paths/: mapping.cfg
common/: default.nix  fonts.nix
common/themes/: ai.nix  cag.nix  default.nix  eye.nix  rose-pine-dawn.nix
devshells/: README.md  default.nix  haskell.nix  lua.nix  purescript.nix  rwtw.nix  typst.nix  visonum.nix  web.nix
devshells/bootstrap/: nixpkgs.nix  shell.nix
dns/: common.nix  pkgs.nix
dns/config/: common.nix  octodns.yaml
docs/: history.md  ports.md  pricing.md
hardware/: laptop.nix
home/: calypso.nix  euporie.nix  global.nix  iso.nix  lapetus.nix  tethys.nix
modules/: README.md  bluetooth.nix  default.nix  foreign.nix  helpers.nix  network.nix  nix.nix  overlay.nix  printers.nix  users.nix  xserver.nix
modules/applications/xmonad/: Main.hs  default.nix  xmonad-config.cabal  xmonad.hs
nix/: sources.json
overlays/: default.nix  plover.nix
pkgs/: default.nix  homer.nix  octodns-cloudflare.nix  plymouth-themes.nix  sherlock.nix  vimclip.nix  wofi-pass.nix
scripts/: age-public-key.sh  build-iso.sh  emergency-lapetus.sh  emergency.sh  hm-activate.sh  hm-rebuild.sh  live.sh  rebuild.sh  repl.sh  save-keys.sh  setup-rsync-ssh.sh  sops-rekey.sh  ssh-to-age.sh
secrets/: adrielus_password.age  secrets.nix  wifi_passwords.age
(+592 files in other folders)
